--- a/src/manex.css
+++ b/src/manex.css
@@ -57,6 +57,15 @@ h1, h2, h3, h4, h5, h6, p {
 	font-weight: normal;
 }
 
+a {
+	color: var(--accent) !important;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 hr {
 	width: 80%;
 	height: 1px;
