--- a/src/manex.css
+++ b/src/manex.css
@@ -596,6 +596,7 @@ select:focus {
 	display: flex;
 	flex-direction: column;
 	flex: 1;
+	position: relative;
 }
 
 .message-list-container > .message-list {
@@ -624,6 +625,8 @@ select:focus {
 .message-list-container > .messagebox {
 	height: 2.4em;
 	background: #161616;
+	position: relative;
+	z-index: 9;
 }
 
 .content-divider > .member-list {
@@ -897,6 +900,41 @@ select:focus {
 }
 
 /* message box */
+
+.command-container {
+	width: 100%;
+	max-height: 35vh;
+	padding-top: 0.5em;
+	background: #161616;
+	border-top-left-radius: 0.7em;
+	border-top-right-radius: 0.7em;
+	display: block;
+	position: absolute;
+	left: 0;
+	bottom: 2.4em;
+	box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+	overflow: auto;
+}
+
+.command-container::before {
+	content: "Commands Matching your Query;";
+	color: rgba(255, 255, 255, 0.65);
+	font-size: 0.7em;
+	position: relative;
+	top: -0.15em;
+	left: 2em;
+	z-index: 9;
+}
+
+.command-container > .command {
+	padding: 0.1em 1em;
+}
+
+.command-container > .command::before {
+	content: "/";
+	margin-right: 0.5em;
+	color: rgba(255, 255, 255, 0.2);
+}
 
 .messagebox > form {
 	width: 100%;
